--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,6 +3,5 @@ name = "rs-os"
 version = "0.1.0"
 edition = "2021"
 
-# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
-
 [dependencies]
+bootloader = "0.9.23" #Latest version fails to compile
