--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,3 +6,8 @@ edition = "2021"
 [dependencies]
 bootloader = "0.9.23" #Later versions fail to compile
 volatile = "0.2.6" #Later versions will not work as intended
+spin = "0.9.8"
+
+[dependencies.lazy_static]
+version = "1.0"
+features = ["spin_no_std"]
