--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,6 +7,11 @@ edition = "2021"
 name = "should_panic"
 harness = false
 
+[[test]]
+name = "stack_overflow"
+harness = false
+
+
 [dependencies]
 bootloader = "0.9.23" #Later versions fail to compile
 volatile = "0.2.6" #Later versions will not work as intended
